@@ -99,6 +99,14 @@ val int_tag : int
 val out_of_heap_tag : int
 val unaligned_tag : int   (* should never happen @since 3.11.0 *)
 
+module Closure : sig
+  type info = {
+    arity: int;
+    start_env: int;
+  }
+  val info : t -> info
+end
+
 module Extension_constructor :
 sig
   type t = extension_constructor
